--- a/etc/xdi2/xdi2-selfhosted.properties
+++ b/etc/xdi2/xdi2-selfhosted.properties
@@ -5,4 +5,4 @@ secrettokendigest=xdi2-digest:ec136367-5969-4e69-9c8a-483e330c317f:8a447e411ad21
 discoveryservice=http://localhost:7201/xdi/graph
 uri.base=http://localhost:7201/xdi/
 uri.base.websocket=ws://localhost:7201/xdi/
-uri.connect=http://localhost:7201/xdi/auth
+uri.connect=http://localhost:9202/auth
