--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 			<plugin>
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
-				<version>9.3.0.M1</version>
+				<version>9.4.0.M1</version>
 				<configuration>
 					<jettyConfig>
 						${basedir}/src/test/resources/jetty.xml
@@ -41,7 +41,7 @@
 					<jettyEnvXml>
 						${basedir}/src/test/resources/jetty-env.xml
 					</jettyEnvXml>
-					<webApp><contextPath>/</contextPath></webApp>
+					<contextPath>/</contextPath>
 					<useTestClasspath>true</useTestClasspath>
 					<systemProperties>
 						<systemProperty>
@@ -80,7 +80,7 @@
 					<dependency>
 						<groupId>org.eclipse.jetty.websocket</groupId>
 						<artifactId>websocket-server</artifactId>
-						<version>9.3.0.M1</version>
+						<version>9.4.0.M1</version>
 						<scope>compile</scope>
 					</dependency>
 				</dependencies>
